# yieldback

contracts/: .gitignore  Cargo.toml  MASTER PLAN.md  README.md
contracts/bindings/src/: index.ts
contracts/contracts/adapter/protocol_adapters/yield_sim_adapter/: Cargo.toml
contracts/contracts/adapter/protocol_adapters/yield_sim_adapter/src/: lib.rs
contracts/contracts/adapter/traits/: Cargo.toml
contracts/contracts/adapter/traits/src/: lib.rs
contracts/contracts/amm/: Cargo.toml
contracts/contracts/amm/src/: lib.rs
contracts/contracts/core/escrow/src/: contract.rs  errors.rs  lib.rs
contracts/contracts/core/factory/: Cargo.toml
contracts/contracts/core/factory/src/: contract.rs  lib.rs  storage.rs
contracts/contracts/core/tokens/yield_token/: Cargo.toml
contracts/contracts/core/tokens/yield_token/src/: contract.rs  lib.rs  storage.rs  test.rs
contracts/contracts/core/tokens/yield_token/test_snapshots/test/: test_burn_accrues_yield_before_burning.1.json  test_initialization.1.json  test_mint_sets_initial_index.1.json  test_mint_to_existing_user_preserves_high_water_mark.1.json  test_multiple_claims_accumulate_yield.1.json  test_no_yield_if_rate_unchanged.1.json  test_proportional_yield_distribution.1.json  test_transfer_accrues_yield_for_both_parties.1.json  test_transfer_to_existing_user_preserves_index.1.json  test_user_index_updates_after_accrual.1.json  test_yield_accrues_when_exchange_rate_increases.1.json
contracts/contracts/core/yield/yield_manager/: Cargo.toml
contracts/contracts/core/yield/yield_manager/src/: contract.rs  lib.rs  storage.rs  test.rs
contracts/contracts/core/yield/yield_manager/test_snapshots/test/: test_cannot_redeem_principal_before_maturity.1.json  test_deposit_mints_pt_and_yt.1.json  test_exchange_rate_increases_over_time.1.json  test_exchange_rate_locks_at_maturity.1.json  (+7 more)
contracts/contracts/core/yield/yield_manager_interface/src/: lib.rs
contracts/contracts/coupon/: Cargo.toml
contracts/contracts/coupon-token/: Cargo.toml
contracts/contracts/coupon-token/src/: lib.rs
contracts/contracts/coupon/src/: lib.rs
contracts/contracts/escrow/: Cargo.toml
contracts/contracts/escrow/src/: constants.rs  contract.rs  escrow.rs  escrow_old.rs  lib.rs  token_deployment.rs
contracts/contracts/escrow/src/utils/: deployments.rs  mod.rs  token_deployment.rs
contracts/contracts/factory/: Cargo.toml
contracts/contracts/factory/src/: factory.rs  lib.rs  storage.rs
contracts/contracts/lending/adapters/blend-adapter/: Cargo.toml
contracts/contracts/lending/adapters/blend-adapter/src/: constants.rs  contract.rs  lib.rs
contracts/contracts/lending/core/: Cargo.toml
contracts/contracts/lending/core/src/: errors.rs  lib.rs  traits.rs  types.rs
contracts/contracts/lending/protocol-lender/: Cargo.toml
contracts/contracts/lending/protocol-lender/src/: constants.rs  contract.rs
contracts/contracts/mocks/mock_adapter/src/: lib.rs
contracts/contracts/mocks/mock_blend_pool/: Cargo.toml
contracts/contracts/mocks/mock_blend_pool/src/: lib.rs
contracts/contracts/mocks/mock_token/: Cargo.toml
contracts/contracts/mocks/mock_token/src/: lib.rs
contracts/contracts/mocks/mock_vault/src/: lib.rs
contracts/contracts/mocks/mock_yield_protocol/: Cargo.toml
contracts/contracts/mocks/mock_yield_protocol/src/: lib.rs
contracts/contracts/principal-token/src/: lib.rs
contracts/contracts/principle/: Cargo.toml
contracts/contracts/principle/src/: lib.rs
contracts/contracts/share/: Cargo.toml
contracts/contracts/share/src/: coupon.rs  lib.rs  principal.rs  token.rs
contracts/contracts/simulation/blend-pool-sim/: Cargo.toml
contracts/contracts/simulation/blend-pool-sim/src/: lib.rs
contracts/contracts/simulation/test-token/: Cargo.toml
contracts/contracts/simulation/test-token/src/: lib.rs
contracts/contracts/simulation/yield-pool-sim/: Cargo.toml
contracts/contracts/simulation/yield-pool-sim/src/: lib.rs
contracts/contracts/test_adapters/mock_adapter/: Cargo.toml
contracts/contracts/tokens/principal-token/: Cargo.toml
contracts/contracts/tokens/principal_token/: Cargo.toml
contracts/contracts/tokens/principal_token/src/: lib.rs
contracts/contracts/tokens/standardized_yield/: Cargo.toml
contracts/contracts/tokens/standardized_yield/src/: lib.rs
contracts/contracts/tokens/yield-token/: Cargo.toml
contracts/contracts/tokens/yield-token/src/: lib.rs  token.rs
contracts/contracts/tokens/yield_token/: Cargo.toml
contracts/contracts/tokens/yield_token/src/: lib.rs
contracts/contracts/vault/: Cargo.toml
contracts/contracts/vault/core/: Cargo.toml
contracts/contracts/vault/core/src/: lib.rs
contracts/contracts/vault/src/: lib.rs  storage.rs
contracts/contracts/vault/strategies/base_strategy/: Cargo.toml
contracts/contracts/vault/strategies/base_strategy/src/: lib.rs
contracts/contracts/vault/strategies/blend_strategy/: Cargo.toml
contracts/contracts/vault/strategies/blend_strategy/src/: lib.rs
contracts/contracts/vault/strategies/traits/: Cargo.toml
contracts/contracts/vault/strategies/traits/src/: lib.rs
contracts/tests/: Cargo.toml  blend_pool_tests.rs  escrow_tests.rs  mock_adapter.rs  mock_token.rs  mod.rs  mod_imports.rs  test_fixture.rs  yield_pool_tests.rs
contracts/tests/test_snapshots/: test_deploy_sy_token.1.json  test_deposit.1.json  test_deposit_and_withdrawal_with_interest.1.json  test_deposit_basic.1.json  test_deposit_zero_amount.1.json  test_escrow_constructor.1.json  test_multiple_deposits_pt_yt_accumulation.1.json  test_partial_withdrawal_with_interest.1.json  test_pt_yt_equal_quantities.1.json  test_pt_yt_tokens_minted_on_deposit.1.json  test_pt_yt_tokens_retrievable.1.json  test_redeem_principal_at_exact_maturity.1.json  test_redeem_principal_at_maturity.1.json  test_redeem_principal_before_maturity.1.json  test_redeem_principal_multiple_users.1.json
contracts/wasms/: escrow.wasm  mock_adapter.wasm  mock_token.wasm  mock_yield_protocol.wasm  principal_token.wasm  standardized_yield.wasm  yield_pool_sim.wasm  yield_sim_adapter.wasm  yield_token.wasm
(+63 files in other folders)
