[workspace]
resolver = "2"
members = [
  "contracts/core/tokens/principal_token",
  "contracts/core/tokens/yield_token",
  "contracts/core/yield/yield_manager",
  "contracts/vault/core",
  "contracts/vault/vault_interface",
  "contracts/vault/strategies/traits",
  "contracts/vault/strategies/blend_strategy",
  "contracts/mocks/mock_token",
  "contracts/mocks/mock_blend_pool",
  "contracts/mocks/mock_vault",
  "contracts/amm",
]

[workspace.dependencies]
soroban-sdk = "23.0.2"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more information about this profile see https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true
