[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
escrow = { path = "../contracts/escrow" }
principal_token = { path = "../contracts/tokens/principal_token" }
yield_token = { path = "../contracts/tokens/yield_token" }
adapter_trait = { path = "../contracts/adapter/traits" }
mock_token = { path = "../contracts/mocks/mock_token" }
mock_adapter = { path = "../contracts/mocks/mock_adapter" }
mock_yield_protocol = { path = "../contracts/mocks/mock_yield_protocol" }

[[test]]
name = "escrow_tests"
path = "escrow_tests.rs"
