[package]
name = "escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
# Add Blend Protocol SDK for pool interactions
blend-contract-sdk = "2.22.0"

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
# Add Blend testutils for testing
blend-contract-sdk = { version = "2.22.0", features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true