[package]
name = "vault"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }

# OpenZeppelin Stellar contracts
[dependencies.stellar-tokens]
git = "https://github.com/OpenZeppelin/stellar-contracts"
package = "stellar-tokens"
tag = "v0.5.1"

[dependencies.stellar-access]
git = "https://github.com/OpenZeppelin/stellar-contracts"
package = "stellar-access"
tag = "v0.5.1"

[dependencies.stellar-contract-utils]
git = "https://github.com/OpenZeppelin/stellar-contracts"
package = "stellar-contract-utils"
tag = "v0.5.1"

[dependencies.stellar-macros]
git = "https://github.com/OpenZeppelin/stellar-contracts"
package = "stellar-macros"
tag = "v0.5.1"


[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true