[package]
name = "protocol-lender"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-sdk = "22.0.1"
lending-core = { path = "../core" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]

